[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
rust-version = "1.85.0"
version = "2.1.5"
authors = ["Ziqiao Kong <mio@lazym.io>", "Lukas Seidel", "Amaan Qureshi <amaanq12@gmail.com>"]
keywords = ["unicorn", "cpu", "emulator", "bindings"]
categories = ["api-bindings", "emulators", "no-std", "virtualization"]
documentation = "https://github.com/unicorn-engine/unicorn/wiki"
edition = "2024"
license = "GPL-2.0"
readme = "./Readme.md"
repository = "https://github.com/unicorn-engine/unicorn"
description = "Rust bindings for the Unicorn emulator with utility functions"

[workspace.lints.clippy]
cast_lossless = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_sign_loss = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
similar_names = "allow"
unreadable_literal = "allow"
use_self = "allow"
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

[workspace.dependencies]
unicorn-engine-sys = {version = "2.1.5", path = "./crates/unicorn-sys", default-features = false}
unicorn-engine = {version = "2.1.5", path = "./crates/unicorn", default-features = false}